--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
+
+  color: #212121;
 }
 
 #root {
@@ -15,5 +17,5 @@ body {
 }
 
 .icon-down {
-  transform: translate(-90deg);
+  transform: rotate(-90deg);
 }
