--- a/src/components/CalendarControls.css
+++ b/src/components/CalendarControls.css
@@ -41,3 +41,16 @@
   font-size: 1.6rem;
   color: #fff;
 }
+
+.button {
+  border-radius: 0;
+  background-color: rgba(255, 255, 255, .6);
+  border: 0;
+  padding: 10px 15px;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.button--reset {
+  margin-left: 20px;
+}
